syntax = "proto3";

package FileStreaming;

enum UploadStatusCode{
    Unknown = 0;
    OK = 1;
    Failed = 2;
}

service ShareFileService {

    // this RPC shares files between the client and the server

    //Provide a function that will return the file names of the media folder
    rpc ShowFiles(Folder) returns (stream FileName) {}

    // 1 step. Client-to-Server streaming. The server streams the file to the client.
    rpc ServerUpload(FileName) returns (stream ChunkPackage) {}
}

message Chunk{
    bytes Content = 1;
}

message FileName{
    string FileName = 1;
}

message Folder{
    string Folder = 1;
}

message UploadStatus{
    string Message = 1;
    UploadStatusCode Code = 2;
}

message ChunkPackage{
    Chunk Batch = 1;
    UploadStatus Status= 2;
}
